assets/css/main.css
:root {
    --pico-font-family-sans-serif: "Poppins", sans-serif, var(--pico-font-family-emoji);
    --pico-block-spacing-vertical: calc(1.5 * var(--pico-spacing));
    --banner-height: 600px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    --pico-font-family: "Raleway", sans-serif, var(--pico-font-family-emoji);
}

h2,
h3 {
    text-transform: uppercase;
}

h1 {
    --pico-line-height: 1.375;
}

h2 {
    --pico-line-height: 1.45;
}

h3 {
    --pico-line-height: 1.525;
}

h4 {
    --pico-line-height: 1.6;
}

h5 {
    --pico-line-height: 1.675;
}

h6 {
    --pico-line-height: 1.75;
}

hr {
    margin: calc(2.5 * var(--pico-typography-spacing-vertical)) 0;
    border-top-width: 4px;
}

details + hr {
    margin: calc(1.5 * var(--pico-typography-spacing-vertical)) 0;
    border-top-width: 1.6px;
}

@media (min-width: 768px) {
    .float-left {
        width: 40% !important;
        float: left;
        margin-right: var(--pico-spacing);
        margin-bottom: var(--pico-spacing);
    }

    .float-right {
        width: 40% !important;
        float: right;
        margin-bottom: var(--pico-spacing);
        margin-left: var(--pico-spacing);
    }

    .featured {
        grid-template-columns: repeat(auto-fit, minmax(max(calc(33% - 2 * var(--pico-grid-column-gap)), 18rem), 1fr));
    }
}

.lqip {
    width: fit-content;
    background-size: cover;
    background-position: center;
}

.grid {
    margin-bottom: var(--pico-typography-spacing-vertical);
}

.grid .lqip {
    width: initial;
}

.grid img {
    width: 100%;
}

.grid > article {
    display: flex;
    flex-direction: column;
}

.grid > article > p:last-of-type {
    flex: 1;
}

.grid > article > footer {
    margin-top: 0;
}

.header {
    padding: 0 1rem;
    background-color: var(--pico-background-color);
    color: var(--pico-color);
}

.header.wide {
    display: none;
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    z-index: 1;
    white-space: nowrap;
}

@media (min-width: 1280px) {
    .header:not(.wide) {
        display: none;
    }

    .header.wide {
        display: inherit;
    }
}

.header li {
    position: relative;
}

.header aside {
    visibility: hidden;
    opacity: 0;
    position: absolute;
    top: 100%;
    width: max-content;
    max-width: 40vw;
    padding: 0 var(--pico-nav-element-spacing-horizontal);
    background-color: black;
    z-index: 1;
    transition: 0.2s ease-out;
}

.header li:hover aside,
.header li:focus-within aside {
    visibility: visible;
    opacity: 1;
}

.main-menu ul {
    visibility: hidden;
    opacity: 0;
    position: absolute;
    transition: 0.2s ease-out;
}

.main-menu > li {
    transition: 0.2s ease-out;
}

.main-menu > li:hover,
.main-menu > li:focus-within {
    background-color: #3B3B3B;
}

.main-menu li:hover ul,
.main-menu li:focus-within ul {
    visibility: visible;
    opacity: 1;
}

.main-menu li:hover ul {
    z-index: 1;
}

.header:not(.wide) .main-menu ul {
    left: calc(100% + var(--pico-nav-element-spacing-horizontal));
    top: 0;
    width: max-content;
    max-width: 50vw;
    background-color: #373C44;
}

.header.wide .main-menu ul {
    flex-direction: column;
    left: calc(50% + var(--pico-nav-element-spacing-horizontal));
    top: 100%;
    transform: translateX(-50%);
    padding: 0 var(--pico-nav-element-spacing-horizontal);
    background-color: black;
}

.header.wide [role=button] {
    margin-bottom: calc(var(--pico-nav-link-spacing-vertical) * -1);
}

.touch {
    display: none;
}

@media (pointer: coarse) {
    .no-touch {
        display: none;
    }

    .touch {
        display: inline-block;
    }

    aside li .touch {
        display: block;
    }
}

.banner {
    height: var(--banner-height);
    margin-top: calc(0rem - var(--pico-block-spacing-vertical));
    margin-bottom: var(--pico-block-spacing-vertical);
}

.banner .lqip {
    position: absolute;
    left: 0;
    width: 100%;
    height: var(--banner-height);
    overflow: hidden;
}

.banner img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.banner > :not(.lqip) {
    position: relative;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

.banner .attr {
    position: relative;
    top: calc(-1lh - 2 * var(--pico-spacing));
    padding: var(--pico-spacing);
    text-align: right;
    white-space: nowrap;
    text-shadow: black 0 0 1rem;
}

footer {
    text-align: center;
}

body > footer {
    background-color: var(--pico-background-color);
    color: var(--pico-color);
}

footer nav {
    justify-content: center;
}

footer nav ul {
    flex-wrap: wrap;
    justify-content: center;
}

footer nav a:not([role=button]) {
    --pico-color: var(--pico-contrast);
    --pico-underline: var(--pico-contrast-underline);
}

footer nav a:not([role=button]):is(:hover, :active, :focus) {
    --pico-color: var(--pico-contrast-hover);
    --pico-underline: var(--pico-contrast-hover-underline);
}

.main-section {
    display: flex;
    flex-direction: column;
}

@media (min-width: 1024px) {
    .main-section {
        flex-direction: row;
    }

    .nav-section {
        width: 16rem;
        margin-right: var(--pico-grid-column-gap);
    }
}

.social {
    font-size: 2em;
    line-height: 0.03125em;
}

.grid div {
    container-type: inline-size;
}

@container (min-width: 100px) {
    .grid img {
        height: 60cqi;
        object-fit: cover;
    }
}

.tabs {
    margin-top: var(--pico-spacing);
    margin-bottom: var(--pico-spacing);
    border: 0.1rem solid var(--pico-primary-border);
    overflow: hidden;
    display: flex;
    flex-wrap: wrap;
	border-radius: var(--pico-border-radius);
}

.tabs input.toggle {
    display: none;
}

.tabs .tab-content {
    padding: var(--pico-spacing);
    border-top: 0.1rem solid var(--pico-primary-border);
    order: 999;
    width: 100%;
    display: none;
}
.tabs label {
    display: inline-block;
    padding: var(--pico-spacing);
    border-bottom: .1rem transparent;
    cursor: pointer;
}
.tabs input[type="radio"]:checked + label {
    background-color: var(--pico-primary-border);
    color: var(--pico-background-color);
    border-bottom: .1rem solid var(--pico-primary-border);
}
.tabs input[type="radio"]:checked + label + .tab-content {
    display: block;
}
.tabs input[type="radio"]:focus + label {
    outline-style: auto;
    outline-color: currentColor;
    outline-color: -webkit-focus-ring-color;
}

